--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:3306/camiones
-spring.datasource.username=camiones
-spring.datasource.password=camiones
+spring.datasource.url=jdbc:mysql://containers-us-west-96.railway.app/railway
+spring.datasource.username=root
+spring.datasource.password=zAVg5bMEoa5kHi5QhkXX
 server.port=8090
