--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:d82ChcNgDE4NFJs6KlC0@containers-us-west-96.railway.app:6674/railway
-spring.datasource.username=root
-spring.datasource.password=d82ChcNgDE4NFJs6KlC0
+spring.datasource.url=jdbc:mysql://root:SUP36xKIYDEKXcyjlFNd@containers-us-west-108.railway.app:6683/railway
+
