--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:SUP36xKIYDEKXcyjlFNd@containers-us-west-108.railway.app:6683/railway
-
+spring.datasource.url=jdbc:mysql://containers-us-west-108.railway.app:6683/railway
+spring.datasource.username=root
+spring.datasource.password=SUP36xKIYDEKXcyjlFNd
