--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:zAVg5bMEoa5kHi5QhkXX@containers-us-west-96.railway.app:6674/railway
-spring.datasource.username=root
-spring.datasource.password=zAVg5bMEoa5kHi5QhkXX
+spring.datasource.url=jdbc:mysql://db4free.net/camiones
+spring.datasource.username=camiones
+spring.datasource.password=camiones
 server.port=8090
