--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://db4free.net/camiones
-spring.datasource.username=camiones
-spring.datasource.password=camiones
-server.port=8090
+spring.datasource.url=jdbc:mysql://root:r2RHNmMFoAmFO18lvrT5@containers-us-west-100.railway.app:7171/railway
