--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:r2RHNmMFoAmFO18lvrT5@containers-us-west-100.railway.app:7171/railway
+spring.datasource.url=jdbc:mysql://root:t2tpu7cpwKWjR8seqQfb@containers-us-west-85.railway.app:7903/railway
